Sutter Health/src/objects/Action_Log__c.object
<CustomObject>
    <fields>
        <fullName>Above_Ceiling_Explanation__c</fullName>
        <label>Above Ceiling Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Log_Status__c</fullName>
        <label>Action Log Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Valley</fullName>
                </value>
                <value>
                    <fullName>All Bay</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Alta Bates Medical Center</fullName>
                </value>
                <value>
                    <fullName>California Pacific Medical Center</fullName>
                </value>
                <value>
                    <fullName>Central Valley Medical Group</fullName>
                </value>
                <value>
                    <fullName>Eden Medical Center</fullName>
                </value>
                <value>
                    <fullName>Gould Medical Group</fullName>
                </value>
                <value>
                    <fullName>Memorial Hospital Los Banos</fullName>
                </value>
                <value>
                    <fullName>Memorial Medical Center</fullName>
                </value>
                <value>
                    <fullName>Menlo Park Surgical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mills-Peninsula Health Services</fullName>
                </value>
                <value>
                    <fullName>Novato Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation – Mills Div</fullName>
                </value>
                <value>
                    <fullName>San Leandro Hospital</fullName>
                </value>
                <value>
                    <fullName>St. Luke’s Hospital</fullName>
                </value>
                <value>
                    <fullName>Summit Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Amador Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Auburn Faith Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Sutter Center for Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Sutter Coast Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Davis Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Delta Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter East Bay Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Gould Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Lakeside Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Maternity and Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center Sacramento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_Flow_Explanation__c</fullName>
        <label>Air Flow Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Services__c</fullName>
        <label>Application Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BAA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRF_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRF Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Hospital_Fire_Emergency_Proc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contractor education completed for Hospital Fire and Emergency procedures</description>
        <inlineHelpText>Contractor education completed for Hospital Fire and Emergency procedures</inlineHelpText>
        <label>Completed: Hospital Fire/Emergency Proc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Infection_Control_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed: Infection Control Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confined_Space_Explanation__c</fullName>
        <label>Confined Space Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Activity_Type__c</fullName>
        <label>Construction Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Clean_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Clean Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Matrix_Class__c</fullName>
        <label>Construction Matrix Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Operation_Hours__c</fullName>
        <label>Construction Operation Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Operation__c</fullName>
        <label>Construction Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Item_Name__c</fullName>
        <label>Contract Item Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Actual_Date__c</fullName>
        <label>Contract Signed Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Target_Date__c</fullName>
        <label>Contract Signed Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net new</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor/Consultant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DF_Approval_Date__c</fullName>
        <label>DF Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSOC_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSOC Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSO_Notes__c</fullName>
        <label>DSO Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSO_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSO Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agenda_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSO_Review_Status__c</fullName>
        <label>DSO Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_BAA_last_executed__c</fullName>
        <label>Date BAA last executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_MSA_last_executed__c</fullName>
        <label>Date MSA last executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Director_Facilities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director Facilities</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agenda_Items_DF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dust_Explanation__c</fullName>
        <label>Dust Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_for_Thought__c</fullName>
        <label>Food for Thought</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <label>Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSO_Approval_Date__c</fullName>
        <label>HSO Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hazard_Management_Mitigation_Measures__c</fullName>
        <description>Environmental hazard Management and mitigation measures required</description>
        <inlineHelpText>Environmental hazard Management and mitigation measures required</inlineHelpText>
        <label>Hazard Management/Mitigation Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazard_Materials_Chemicals_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are Hazardous materials or chemicals present?</description>
        <inlineHelpText>Are Hazardous materials or chemicals present?</inlineHelpText>
        <label>Hazard: Materials/Chemicals Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hazards_Present__c</fullName>
        <description>List of Environmental Hazard(s) Present</description>
        <inlineHelpText>List of Environmental Hazard(s) Present</inlineHelpText>
        <label>Hazards Present</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hospital_Safety_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hospital Safety Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agenda_Items_HSO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hot_Permit_Explanation__c</fullName>
        <label>Hot Permit Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICC_Approval_Date__c</fullName>
        <label>ICC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISSC_Topic__c</fullName>
        <label>ISSC Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check in/Roll call</fullName>
                </value>
                <value>
                    <fullName>Action Item Review</fullName>
                </value>
                <value>
                    <fullName>Project Review</fullName>
                </value>
                <value>
                    <fullName>Physician Updates</fullName>
                </value>
                <value>
                    <fullName>Hot Topics/Misc</fullName>
                </value>
                <value>
                    <fullName>Round Robin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Above_Ceiling_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact: Above Ceiling Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Air_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will there be any impact on Air Flow</description>
        <inlineHelpText>Will there be any impact on Air Flow</inlineHelpText>
        <label>Impact: Air Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Confined_Space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact: Confined Space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Dust__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the project create any dust</description>
        <inlineHelpText>Will the project create any dust</inlineHelpText>
        <label>Impact: Dust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Hot_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a Hot Permit Required</description>
        <inlineHelpText>Is a Hot Permit Required</inlineHelpText>
        <label>Impact: Hot Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Noise_Disturbance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the project create noise disturbance</description>
        <inlineHelpText>Will the project create noise disturbance</inlineHelpText>
        <label>Impact: Noise Disturbance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Other_Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impact: Other Permit(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_vibration_disturbance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will the project create a vibration disturbance</description>
        <inlineHelpText>Will the project create a vibration disturbance</inlineHelpText>
        <label>Impact: Vibration Disturbance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infection_Control_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infection Control Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agenda_Items_ICC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Infection_Control_Group__c</fullName>
        <label>Infection Control Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infection_Control_Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infection Control Permit Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interim_Life_Safety_Measures_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please attach an Infection Control Evaluation if Interim Life Safety Measures are required</description>
        <inlineHelpText>Please attach an Infection Control Evaluation if Interim Life Safety Measures are required</inlineHelpText>
        <label>Interim Life Safety Measures Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interruption_Shutdown_Explanation__c</fullName>
        <label>Interruption/Shutdown Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOTO_Explanation__c</fullName>
        <label>LOTO Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOTO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOTO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOU_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOU Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Business_Owner__c</fullName>
        <label>Main Business Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Chemical_Hazard_Explanation__c</fullName>
        <label>Material/Chemical Hazard Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action Log (Meeting Attendee)</relationshipLabel>
        <relationshipName>Action_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Noise_Disturbance_Explanation__c</fullName>
        <label>Noise Disturbance Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OGC_Notes__c</fullName>
        <label>OGC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OGC_Primary_Contact__c</fullName>
        <label>OGC Primary Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OGC_Review_Status__c</fullName>
        <label>OGC Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offshore_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offshore Resources?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Permit_s_Explanation__c</fullName>
        <label>Other Permit(s) Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PHI?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PII__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PII</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presentation_Time__c</fullName>
        <label>Presentation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Action Log (Presenter)</relationshipLabel>
        <relationshipName>Action_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Cost__c</fullName>
        <label>Project Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Impact__c</fullName>
        <label>Project Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Valley</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Bay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <inlineHelpText>Notes about the project that are specific to the IS/SS/OGC collaboration.</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <inlineHelpText>The Project Server project number</inlineHelpText>
        <label>Project Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Action Log</relationshipLabel>
        <relationshipName>Action_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Management_Mitigation_Measure__c</fullName>
        <description>Management and mitigation measures required</description>
        <inlineHelpText>Management and mitigation measures required</inlineHelpText>
        <label>Required Management/Mitigation Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Level__c</fullName>
        <label>Review Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Level Review Sufficient</fullName>
                </value>
                <value>
                    <fullName>Detailed Review Required</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SRA_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRA Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Affiliate__c</fullName>
        <label>Secondary Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alta Bates Medical Center</fullName>
                </value>
                <value>
                    <fullName>California Pacific Medical Center</fullName>
                </value>
                <value>
                    <fullName>Central Valley Medical Group</fullName>
                </value>
                <value>
                    <fullName>Eden Medical Center</fullName>
                </value>
                <value>
                    <fullName>Gould Medical Group</fullName>
                </value>
                <value>
                    <fullName>Memorial Hospital Los Banos</fullName>
                </value>
                <value>
                    <fullName>Memorial Medical Center</fullName>
                </value>
                <value>
                    <fullName>Menlo Park Surgical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mills-Peninsula Health Services</fullName>
                </value>
                <value>
                    <fullName>Novato Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation – Mills Div</fullName>
                </value>
                <value>
                    <fullName>San Leandro Hospital</fullName>
                </value>
                <value>
                    <fullName>St. Luke’s Hospital</fullName>
                </value>
                <value>
                    <fullName>Summit Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Amador Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Auburn Faith Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Care at Home</fullName>
                </value>
                <value>
                    <fullName>Sutter Center for Psychiatry</fullName>
                </value>
                <value>
                    <fullName>Sutter Coast Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Davis Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Delta Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter East Bay Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Gould Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Lakeside Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Maternity and Surgery Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center Sacramento</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Foundation – Contracted</fullName>
                </value>
                <value>
                    <fullName>Sutter Pacific Medical Foundation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Sourcing_Notes__c</fullName>
        <label>Strategic Sourcing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Sourcing_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Sourcing Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Agenda_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Sourcing_Status__c</fullName>
        <label>Strategic Sourcing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Services__c</fullName>
        <label>Technical Services</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Terminal_Clean_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terminal Clean Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Interruption_Shutdown_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contractor education completed for Utility interuption/shutdown procedure</description>
        <label>Utility Interruption/Shutdown Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_Interruptions_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility: Interruptions Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utility_s_Affected__c</fullName>
        <description>List of utility(s) affected</description>
        <inlineHelpText>List of utility(s) affected</inlineHelpText>
        <label>Utility(s) Affected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vibration_Disturbance_Explanation__c</fullName>
        <label>Vibration Disturbance Explanation</label>
        <type>TextArea</type>
    </fields>
    <label>Action Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Log_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Bay</fullName>
        <columns>NAME</columns>
        <columns>Action_Log_Status__c</columns>
        <columns>Description__c</columns>
        <columns>Detail__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Affiliate__c</field>
            <operation>equals</operation>
            <value>All Bay</value>
        </filters>
        <label>All Bay</label>
        <sharedTo>
            <group>Valley_Simple_App_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ISSC_Items</fullName>
        <columns>NAME</columns>
        <columns>Action_Log_Status__c</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>ISSC_Topic__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Log__c.ISSC</value>
        </filters>
        <label>All ISSC Items</label>
        <sharedTo>
            <group>Valley_Simple_App_Users</group>
        </sharedTo>
    </listViews>
</CustomObject>